--- a/src/components/PeopleList.css
+++ b/src/components/PeopleList.css
@@ -32,6 +32,18 @@ tr {
   height: 25px;
 
 }
+.button-accion {
+  background-color: 0;
+  border: 0;
+  width: 20px;
+  height: 20px;
+  margin-left: 5px;
+}
+.button-accion img{
+  width: 15px;
+  height: 15px;
+}
+
 .spinner {
   margin: 15% 45%;
   border: 4px solid rgba(0, 0, 0, 0.1);
