--- a/src/components/Sitio.css
+++ b/src/components/Sitio.css
@@ -1,20 +1,54 @@
+.message {
+  position: fixed;
+top: 0;
+left: 0;
+background-color: rgba(0, 0, 0, 0.8);
+z-index: 999;
+width: 100%;
+height: 100vh;
+display: none;
+justify-content: center;
 
-.spinnerModal {
-  border: 4px solid rgba(0, 0, 0, 0.1);
-  width: 1px;
-  height: 1px;
-  border-radius: 50%;
-  border-left-color: #09f;
-  margin : 0 50%;
-  animation: spin 1s ease infinite;
+}
+.message.is_open{
+  display: flex;
+}
+.message-panel {
+  background-color: #ffffff;
+width: 20%;
+border-radius: 10px;
+height: 15vh;
+
+margin-top: 35vh;
+
+}
+.message-button {
+  border: 0;
+  background-color: white;
+  margin-top: 5px;
+  margin-left: 5px;
+  float: left;
+  
+}
+.message-img{
+  height: 50px;
+  width: 50px;
+  
+  margin-left: 27%;
+ 
+}
+.message-texto{
+  font-size: 15px;
+  margin: 10px;
 }
 
-@keyframes spin {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
+.message-condicional{
+  background: #0C2EEB 0% 0% no-repeat padding-box;
+  width: 50px;
+  color: #FFFFFF;
+  font-size: 18px;
+  border: 0;
+  padding: 2px;
+  margin-left: 10px;
+  margin-right: 10px ;
 }
