--- a/src/components/PeopleList.css
+++ b/src/components/PeopleList.css
@@ -3,34 +3,54 @@
   width: 100%;
 }
 
-.headerTable td, .headerTable th {
-  text-align: center;  
+.headerTable td,
+.headerTable th {
+  text-align: center;
   padding: 8px;
 }
-tr th:first-child { border-top-left-radius: 20px; }
-tr th:last-child{ border-top-right-radius: 20px; }
-tr th:first-child { border-bottom-left-radius: 20px; }
-tr th:last-child { border-bottom-right-radius: 20px; }
-
-tr td:first-child { border-top-left-radius: 20px; }
-tr td:last-child{ border-top-right-radius: 20px; }
-tr td:first-child { border-bottom-left-radius: 20px; }
-tr td:last-child { border-bottom-right-radius: 20px; }
-.headerTable tr:nth-child(even){background-color:white; }
-tr {
-  background-color:  #ddd; 
+tr th:first-child {
+  border-top-left-radius: 20px;
 }
-.headerTable tr:hover {background-color: #f2f2f2;}
+tr th:last-child {
+  border-top-right-radius: 20px;
+}
+tr th:first-child {
+  border-bottom-left-radius: 20px;
+}
+tr th:last-child {
+  border-bottom-right-radius: 20px;
+}
+
+tr td:first-child {
+  border-top-left-radius: 20px;
+}
+tr td:last-child {
+  border-top-right-radius: 20px;
+}
+tr td:first-child {
+  border-bottom-left-radius: 20px;
+}
+tr td:last-child {
+  border-bottom-right-radius: 20px;
+}
+.headerTable tr:nth-child(even) {
+  background-color: white;
+}
+tr {
+  background-color: #ddd;
+}
+.headerTable tr:hover {
+  background-color: #f2f2f2;
+}
 tr {
   margin-bottom: 10px;
 }
 .headerTable th {
   padding-top: 10px;
   padding-bottom: 10px;
-  background-color: #384cb4 ;
+  background-color: #384cb4;
   color: white;
   height: 25px;
-
 }
 .button-accion {
   background-color: 0;
@@ -39,7 +59,7 @@ tr {
   height: 20px;
   margin-left: 5px;
 }
-.button-accion img{
+.button-accion img {
   width: 15px;
   height: 15px;
 }
